# mcp-audit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sample_report.md
.github/workflows/: rugpull-canary.yml  tests.yml
fixtures/: evil_server.py  evil_tool.ts
fixtures/clean_pkg/: package-lock.json  package.json
fixtures/evil_pkg/: package.json
fixtures/shadow_repo/: mcp.json
rules/: poisoning.yaml
skill/: SKILL.md
src/mcp_audit/: __init__.py  __main__.py  allowlist.py  cli.py  connect.py  llm.py  owasp.py  report.py  sources.py
src/mcp_audit/detectors/: __init__.py  base.py  command_injection.py  context_oversharing.py  intent_flow.py  secrets.py  shadow_mcp.py  supply_chain.py  tool_poisoning.py
src/mcp_audit/rules/: injection_corpus.yaml  poisoning.yaml
tests/: test_cli.py  test_detectors.py
